--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nextra-docs-template",
+  "name": "champollion-tw3",
   "version": "0.0.1",
-  "description": "Nextra docs template",
+  "description": "Cours TW3 Licence 3",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,23 +9,25 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shuding/nextra-docs-template.git"
+    "url": "git+https://github.com/micmc422/tw3.git"
   },
-  "author": "Shu Ding <g@shud.in>",
+  "author": "Bardy Michaël <michael.bardy@occitaweb.fr>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shuding/nextra-docs-template/issues"
+    "url": "https://github.com/micmc422/tw3/issues"
   },
-  "homepage": "https://github.com/shuding/nextra-docs-template#readme",
+  "homepage": "https://github.com/micmc422/tw3#readme",
   "dependencies": {
-    "next": "^13.0.6",
-    "nextra": "latest",
-    "nextra-theme-docs": "latest",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "^14.2.8",
+    "nextra": "^2.13.4",
+    "nextra-theme-docs": "^2.13.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "18.11.10",
-    "typescript": "^4.9.3"
+    "@graphql-eslint/eslint-plugin": "^3.20.1",
+    "@types/node": "22.5.4",
+    "@types/react": "18.3.5",
+    "typescript": "^5.5.4"
   }
 }
