--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "homepage": "https://github.com/micmc422/tw3#readme",
   "dependencies": {
     "lucide-react": "^0.439.0",
-    "next": "^14.2.8",
+    "next": "^14.2.9",
     "nextra": "^2.13.4",
     "nextra-theme-docs": "^2.13.4",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-quiz-component": "^0.8.2",
     "sass": "^1.78.0"
@@ -31,6 +32,6 @@
     "@graphql-eslint/eslint-plugin": "^3.20.1",
     "@types/node": "22.5.4",
     "@types/react": "18.3.5",
-    "typescript": "^5.5.4"
+    "typescript": "^5.6.2"
   }
 }
